<resources>
    <string name="app_name">LMS</string>
    <string name="student_login">STUDENT LOGIN</string>
    <string name="dashboard_title">LMS Dashboard</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="ebooks">E-Books</string>
    <string name="books">Books</string>
    <string name="myBooks">My Books</string>
    <string name="notifications">Notifications</string>
    <string name="history">History</string>
    <string name="scan_qr">Scan QR</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="create">Create</string>


    <!--  All Inputs Strings  -->
    <string name="enter_enrollment_no">Enter Enrollment No</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="enter_your_mobile">Enter Your Mobile</string>
    <string name="enter_your_subject">Enter Your Subject</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="enter_your_fname">Enter Your First Name</string>
    <string name="enter_your_mname">Enter Your Middle Name</string>
    <string name="enter_your_lname">Enter Your Last Name</string>
    <string name="choose_your_dob">Select Your DOB</string>

    <!--  Other Strings  -->
    <string name="no">No</string>
    <string name="college">College</string>
    <string name="course">Course</string>
    <string name="semester">Semester</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="search_by_book_name">search by book name</string>
    <string name="filter">Filter</string>
    <string name="messages">Messages</string>

    <!--  ALL FONT SIZE  -->
    <dimen name="page_title">20sp</dimen>
    <dimen name="h1">20sp</dimen>
    <dimen name="h2">18sp</dimen>
    <dimen name="h3">16sp</dimen>
    <dimen name="h4">14sp</dimen>
    <dimen name="h5">12sp</dimen>
    <dimen name="h6">10sp</dimen>

    <string-array name="gender">
        <item>select gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="college">
        <item>select college</item>
        <item>AMPICS</item>
        <item>Other</item>
    </string-array>

    <string-array name="course">
        <item>select course</item>
        <item>BCA</item>
        <item>MCA</item>
        <item>Other</item>
    </string-array>

    <string-array name="semester">
        <item>select semester</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>