<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/profile_header_view"
            android:layout_width="wrap_content"
            android:layout_height="140sp"
            android:background="@drawable/lms_grey_100_no_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnGoToBack"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35sp"
            android:background="@drawable/white_all_round"
            android:onClick="goToBack"
            app:cardCornerRadius="35sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_header_view"
            app:layout_constraintStart_toStartOf="@+id/profile_header_view"
            app:layout_constraintTop_toTopOf="@+id/profile_header_view">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="5sp"
                app:srcCompat="@drawable/icon_left_black_arrow" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="15sp"
                android:padding="5sp"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="@dimen/h1" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewUserProfile"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="-35dp"
            app:cardCornerRadius="55sp"
            app:cardElevation="4sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_header_view">

            <ImageView
                android:id="@+id/imgUserProfile"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:layout_gravity="center"
                android:onClick="updateProfile"
                app:srcCompat="@drawable/demo_profile" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ravi Vasantbhai Panchal"
            android:textColor="@color/black"
            android:textSize="@dimen/h2"
            app:layout_constraintBottom_toBottomOf="@+id/profile_header_view"
            app:layout_constraintEnd_toEndOf="@+id/profile_header_view"
            app:layout_constraintStart_toEndOf="@+id/cardViewUserProfile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15sp"
            android:paddingRight="15sp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:paddingRight="15sp"
                        android:paddingBottom="5sp"
                        android:text="@string/no"
                        android:textSize="@dimen/h3" />

                    <TextView
                        android:id="@+id/tvEnrollNo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5sp"
                        android:text="21034211016"
                        android:textSize="@dimen/h3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:paddingRight="15sp"
                        android:paddingBottom="5sp"
                        android:text="@string/college"
                        android:textSize="@dimen/h3" />

                    <TextView
                        android:id="@+id/tvCollegeName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="middle"
                        android:padding="5sp"
                        android:text="A M Patel Institute of Computer Studies"
                        android:textSize="@dimen/h3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:paddingRight="15sp"
                        android:paddingBottom="5sp"
                        android:text="@string/course"
                        android:textSize="@dimen/h3" />

                    <TextView
                        android:id="@+id/tvCourse"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5sp"
                        android:text="MCA"
                        android:textSize="@dimen/h3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:paddingRight="15sp"
                        android:paddingBottom="5sp"
                        android:text="@string/semester"
                        android:textSize="@dimen/h3" />

                    <TextView
                        android:id="@+id/tvSemester"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5sp"
                        android:text="3"
                        android:textSize="@dimen/h3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:paddingRight="15sp"
                        android:paddingBottom="5sp"
                        android:text="@string/dob"
                        android:textSize="@dimen/h3" />

                    <TextView
                        android:id="@+id/tvDob"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5sp"
                        android:text="24-11-2000"
                        android:textSize="@dimen/h3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:paddingRight="15sp"
                        android:paddingBottom="5sp"
                        android:text="@string/gender"
                        android:textSize="@dimen/h3" />

                    <TextView
                        android:id="@+id/tvGender"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5sp"
                        android:text="Male"
                        android:textSize="@dimen/h3" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:paddingRight="15sp"
                        android:paddingBottom="5sp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h3" />

                    <EditText
                        android:id="@+id/etUserEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:layout_weight="1"
                        android:background="@drawable/white_all_round_blue_border"
                        android:elevation="2sp"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        android:padding="15sp"
                        android:selectAllOnFocus="false"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:paddingRight="15sp"
                        android:paddingBottom="5sp"
                        android:text="@string/mobile"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h3" />

                    <EditText
                        android:id="@+id/etUserMobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:layout_weight="1"
                        android:background="@drawable/white_all_round_blue_border"
                        android:elevation="2sp"
                        android:hint="@string/enter_your_mobile"
                        android:inputType="phone"
                        android:padding="15sp"
                        android:selectAllOnFocus="false"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:paddingRight="15sp"
                        android:paddingBottom="5sp"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h3" />

                    <EditText
                        android:id="@+id/etUserAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:layout_weight="1"
                        android:background="@drawable/white_all_round_blue_border"
                        android:elevation="2sp"
                        android:hint="@string/enter_your_address"
                        android:inputType="textPostalAddress"
                        android:padding="15sp"
                        android:selectAllOnFocus="false"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5sp"
                        android:paddingRight="15sp"
                        android:paddingBottom="5sp"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h3" />

                    <EditText
                        android:id="@+id/etUserPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:layout_weight="1"
                        android:background="@drawable/white_all_round_blue_border"
                        android:elevation="2sp"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:padding="15sp"
                        android:selectAllOnFocus="false"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnUpdateProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/lms_blue"
                        android:onClick="updateProfile"
                        android:text="UPDATE"
                        app:cornerRadius="20sp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>