<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_bottom_round"
        android:elevation="4sp"
        android:orientation="vertical"
        android:paddingLeft="15sp"
        android:paddingTop="35sp"
        android:paddingRight="15sp"
        android:paddingBottom="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnGoToBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_left_arrow"
                android:onClick="goToBack" />

            <TextView
                android:id="@+id/tvBookActivityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_weight="1"
                android:text="@string/myBooks"
                android:textColor="@color/white"
                android:textSize="@dimen/h1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etSearchBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="@drawable/white_all_round"
                android:ems="10"
                android:hint="@string/search_by_book_name"
                android:inputType="textPersonName"
                android:padding="5sp"
                android:textAlignment="center"
                android:textSize="@dimen/h3" />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/lms_green_all_round"
                android:padding="6sp"
                app:srcCompat="@drawable/icon_search" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp">

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lms_blue"
            android:text="@string/filter"
            android:textSize="12sp"
            app:cornerRadius="20sp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="10sp"
            android:text="Recommended By"
            android:textAlignment="viewEnd"
            android:textSize="@dimen/h3" />

        <Switch
            android:id="@+id/switchRecommended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewMyBooksList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15sp"
        android:paddingRight="15sp" />
</LinearLayout>